@@ -80,5 +80,16 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_create" eval="True"/>
             <field name="perm_delete" eval="True"/>
         </record>
+
+        <record model="ir.action.act_window" id="act_sale_relate">
+            <field name="name">Sales</field>
+            <field name="res_model">sale.sale</field>
+            <field name="domain" eval="[('lines.promotion', 'in', Eval('active_ids', []))]" pyson="1"/>
+        </record>
+        <record model="ir.action.keyword" id="act_sale_relate_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">sale.promotion,-1</field>
+            <field name="action" ref="act_sale_relate"/>
+        </record>
     </data>
 </tryton>
